--- a/index.html
+++ b/index.html
@@ -96,5 +96,6 @@
             application(gui,load)
         }
         iframe.onload = () => init(jellyfish);
+        setTimeout(() => init(jellyfish), 500)
     </script>
 </body>
