--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
             background: #000;
         }
         .dg.a {
-            margin-right:0px;
+            margin-right:0px !important;
         }
         .close-button {
             display: none;
