--- a/capacitor/index.html
+++ b/capacitor/index.html
@@ -273,19 +273,19 @@
                             min="0" />
                     </div><br>
                     <div id="scriptHubScriptContainer">
-                        <div class="script"><i class="material-icons">description</i><b> Kill Gays Script!</b>
+                        <div class="script"><i class="material-icons">description</i><b> Infinite Yield</b>
                             <div style="margin-left: calc(2em + 4px); width: calc(320px - 3em); white-space: pre-wrap;">
                                 Game: https://www.roblox.co…</div>
                         </div>
-                        <div class="script"><i class="material-icons">description</i><b> Kill Gays Script!</b>
+                        <div class="script"><i class="material-icons">description</i><b> Orca by 0866</b>
                             <div style="margin-left: calc(2em + 4px); width: calc(320px - 3em); white-space: pre-wrap;">
                                 Game: https://www.roblox.co…</div>
                         </div>
-                        <div class="script"><i class="material-icons">description</i><b> Kill Gays Script!</b>
+                        <div class="script"><i class="material-icons">description</i><b> CMD-X</b>
                             <div style="margin-left: calc(2em + 4px); width: calc(320px - 3em); white-space: pre-wrap;">
                                 Game: https://www.roblox.co…</div>
                         </div>
-                        <div class="script"><i class="material-icons">description</i><b> Kill Gays Script!</b>
+                        <div class="script"><i class="material-icons">description</i><b> Spectator & TP UI</b>
                             <div style="margin-left: calc(2em + 4px); width: calc(320px - 3em); white-space: pre-wrap;">
                                 Game: https://www.roblox.co…</div>
                         </div>
